the_project/backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: thomastoumasu/k8s-backend:2.8
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: backend
  ports: # will let TCP traffic from port 2345 to port 5000
    - port: 2345
      protocol: TCP
      targetPort: 5000 #check env in deployment above
